--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
